# Controller_Input

./: CMakeLists.txt  main.cpp  permissions.txt
Versions/: Device_Detector.cpp  Device_Detector.h  Timer.cpp  Timer.h
Versions/EVENT_BASED_VERSION/: Event_Based.cpp  Event_Based.h  Event_Based_Structs.h  PS4_CODES.h  VibrationEffect.cpp  VibrationEffect.h  XBOX_CODES.h
Versions/HidBased/: CRCTable.h  HID_Based.cpp  HID_Based.h  HID_Related_Info.h  HID_Usages.h  PS4_HID.h  hidapi.h
Versions/JS_ZERO_VERSION/: JS_ZERO.cpp  JS_ZERO.h
